--- a/MonteCarlo/pi_pthread.cbp
+++ b/MonteCarlo/pi_pthread.cbp
@@ -2,25 +2,25 @@
 <CodeBlocks_project_file>
 	<FileVersion major="1" minor="6" />
 	<Project>
-		<Option title="MonteCarlo" />
+		<Option title="pi_pthread" />
 		<Option pch_mode="2" />
 		<Option compiler="gcc" />
 		<Build>
 			<Target title="Debug">
-				<Option output="bin/Debug/MonteCarlo" prefix_auto="1" extension_auto="1" />
-				<Option object_output="obj/Debug/" />
+				<Option output="bin\Debug\pi_pthread" prefix_auto="1" extension_auto="1" />
+				<Option object_output="obj\Debug\" />
 				<Option type="1" />
 				<Option compiler="gcc" />
 				<Compiler>
 					<Add option="-g" />
 				</Compiler>
 				<Linker>
-					<Add library="..\TESTEGL\PThread\libpthread.a" />
+					<Add library="C:\Program Files (x86)\CodeBlocks-EP\MinGW\lib\libpthread.a" />
 				</Linker>
 			</Target>
 			<Target title="Release">
-				<Option output="bin/Release/MonteCarlo" prefix_auto="1" extension_auto="1" />
-				<Option object_output="obj/Release/" />
+				<Option output="bin\Release\pi_pthread" prefix_auto="1" extension_auto="1" />
+				<Option object_output="obj\Release\" />
 				<Option type="1" />
 				<Option compiler="gcc" />
 				<Compiler>
@@ -32,7 +32,9 @@
 			</Target>
 		</Build>
 		<Compiler>
+			<Add option="-std=c++98" />
 			<Add option="-Wall" />
+			<Add option="-pedantic" />
 			<Add option="-fexceptions" />
 		</Compiler>
 		<Unit filename="main.cpp" />
